[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/explosion4.png" type="Texture" id=1]
[ext_resource path="res://sprites/explosionSmoke1.png" type="Texture" id=2]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=3]
[ext_resource path="res://sprites/explosionSmoke3.png" type="Texture" id=4]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosionSmoke2.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosionSmoke5.png" type="Texture" id=8]
[ext_resource path="res://sprites/explosionSmoke4.png" type="Texture" id=9]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=10]
[ext_resource path="res://scripts/behaviors/ShotHitEffect.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="ShotHitEffect" type="Node2D"]
position = Vector2( 536.321, 301.124 )
script = ExtResource( 11 )

[node name="Smoke" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Explosion" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="SmokeStartTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="animation_finished" from="Smoke" to="." method="_on_Smoke_animation_finished"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="SmokeStartTimer" to="." method="_on_SmokeStartTimer_timeout"]
